--- a/src/main/resources/public/src/scss/portal/_variables.scss
+++ b/src/main/resources/public/src/scss/portal/_variables.scss
@@ -13,20 +13,20 @@ $layout-properties-width:                    0;
 $main-banner-height:                         8.75rem; // 140px
 
 // main > main-header
-$main-header-border:                         0.0625rem solid map-get($gray, "line"); // 1px
-$main-header-bg-color:                       map-get($gray, "light");
+$main-header-border:                         0.0625rem solid map-get($grays, "line"); // 1px
+$main-header-bg-color:                       map-get($grays, "light");
 
 // main > main-search
 $main-search-height:                         6.25rem; // 100px
-$main-search-bg-color:                       map-get($gray, "light");
+$main-search-bg-color:                       map-get($grays, "light");
 
 // content
 $content-list-height:                        647px; // 647px
 
 // card
-$card-border:                                0.0625rem solid map-get($gray, "line"); // 1px
+$card-border:                                0.0625rem solid map-get($grays, "line"); // 1px
 // 검색 결과 목록 
-$list-bottom-border:                         0.0625rem solid map-get($gray, "line"); // 1px
+$list-bottom-border:                         0.0625rem solid map-get($grays, "line"); // 1px
 // 검색 키워드 색상
 $keyword-font-color:                         $blue;
 
@@ -37,22 +37,22 @@ $layout-list-height:                         35.44rem; // 567px
 // view
 $view-title-font-size:                1.125rem; // 18px
 $view-title-font-weight:              $font-weight-medium;
-$view-title-font-color:               map-get($black, "light");
+$view-title-font-color:               map-get($blacks, "light");
 
 $view-sub-title-font-size:            $font-size-base; // 16px
 $view-sub-title-font-weight:          $font-weight-regular;
-$view-sub-title-font-color:           map-get($gray, "dark");
+$view-sub-title-font-color:           map-get($grays, "dark");
 
 $view-content-font-size:              $font-size-base; // 16px
 $view-content-font-weight:            $font-weight-regular;
-$view-content-font-color:             map-get($gray, "dark");
+$view-content-font-color:             map-get($grays, "dark");
 //////////////////////////// faq ////////////////////////////
 // faq > faq group
 $faq-group-font-size:                        1.125rem; // 18px
 $faq-group-font-weight:                      $font-weight-medium;
-$faq-group-font-color:                       map-get($black, "light");
+$faq-group-font-color:                       map-get($blacks, "light");
 $faq-group-border-width:                     0.0625rem; // 1px
-$faq-group-border-color:                     map-get($gray, "line");
+$faq-group-border-color:                     map-get($grays, "line");
 $faq-group-border:                           $faq-group-border-width solid $faq-group-border-color;
 $faq-group-opened-border-width:              0.0625rem; // 1px
 $faq-group-opened-border-color:              $blue;
@@ -61,30 +61,30 @@ $faq-group-opened-border:                    $faq-group-opened-border-width soli
 // faq > faq group > faq row
 $faq-row-font-size:                          1rem; // 16px
 $faq-row-font-weight:                        $font-weight-medium;
-$faq-row-font-color:                         map-get($black, "light");
+$faq-row-font-color:                         map-get($blacks, "light");
 $faq-row-opened-bg-color:                    rgba(0, 152, 255, 0.05);
-$faq-row-border-color:                       map-get($gray, "line");
+$faq-row-border-color:                       map-get($grays, "line");
 $faq-row-opened-border-color:                $blue;
 // faq > faq group > faq row content
 $faq-row-content-font-size:                  1rem; // 16px
 $faq-row-content-font-weight:                $font-weight-regular;
-$faq-row-content-font-color:                 map-get($gray, "dark");
+$faq-row-content-font-color:                 map-get($grays, "dark");
 
 //////////////////////////// element /////////////////////////////////
 $table-body-height:                          32.81rem; // 525px
-$table-th-font-color:                        map-get($black, "light");
+$table-th-font-color:                        map-get($blacks, "light");
 $table-td-font-size:                         1rem; // 16px
 $table-td-font-weight:                       $font-weight-regular;
-$table-td-font-color:                        map-get($gray, "dark");
+$table-td-font-color:                        map-get($grays, "dark");
 $table-row-hover-bg-color:                   rgba(230, 232, 235, 0.6);
 
 // 데이터 없을때
 $no-data-found-bg-color:                     rgba(230, 232, 235, 0.6);
 
 ////////////////////////// 브라우저 가이드 //////////////////////////
-$browser-guide-bg-color:                     map-get($gray, "light");
+$browser-guide-bg-color:                     map-get($grays, "light");
 $browser-box-bg-color:                       $white;
-$browser-box-border:                         0.0625rem solid map-get($gray, "line");
+$browser-box-border:                         0.0625rem solid map-get($grays, "line");
 $browser-hover-box-shadow:                   0 0 0.9375rem rgba(204, 206, 209, 0.3); // 15px;
 
 
@@ -96,7 +96,7 @@ $login-logo-position-left:                   5rem; // 80px
 $login-form-width:                           38.13rem; // 610px
 $login-form-font-size:                       1rem; // 16px
 $login-form-font-weight:                     $font-weight-regular;
-$login-form-font-color:                      map-get($gray, "dark");
+$login-form-font-color:                      map-get($grays, "dark");
 
 ////////////////////////// 회원 가입  //////////////////////////
 $signup-bg-color:                            $blue;
@@ -106,16 +106,16 @@ $signup-logo-position-left:                  5rem; // 80px
 $signup-form-width:                          38.13rem; // 610px
 $signup-form-font-size:                      1rem; // 16px
 $signup-form-font-weight:                    $font-weight-regular;
-$signup-form-font-color:                     map-get($gray, "dark");
+$signup-form-font-color:                     map-get($grays, "dark");
 
 ////////////////////////// 세션 만료  //////////////////////////
 $session-invalid-bg-color:                   #F2F5F9;
-$session-invalid-border:                     0.0625rem solid map-get($gray, "line");
+$session-invalid-border:                     0.0625rem solid map-get($grays, "line");
 
 ////////////////////////// 에러  //////////////////////////
 $error-bg-color:                             #F2F5F9;
-$error-border:                               0.0625rem solid map-get($gray, "line");
+$error-border:                               0.0625rem solid map-get($grays, "line");
 
 ///////////////////////// 메일 인증 ////////////////////////////
 $email-certificate-bg-color:                 #F2F5F9;
-$semail-certificate-border:                  0.0625rem solid map-get($gray, "line");
+$semail-certificate-border:                  0.0625rem solid map-get($grays, "line");
