--- a/src/main/resources/public/assets/css/form2.css
+++ b/src/main/resources/public/assets/css/form2.css
@@ -81,45 +81,45 @@ input, button, select, optgroup, textarea {
 
 /* _alignments.scss 
  *
- * 파일 경로 : template/_alignments.scss
+ * 파일 경로 : template/utilities/_alignments.scss
  * @description 정렬, 배치 관련 디자인
  * @author jy.lim
  * @version 1.0
  */
 .align-center {
-  text-align: center;
+  text-align: center !important;
 }
 
 .align-left {
-  text-align: left;
+  text-align: left !important;
 }
 
 .align-right {
-  text-align: right;
+  text-align: right !important;
 }
 
 .align-baseline {
-  vertical-align: baseline;
+  vertical-align: baseline !important;
 }
 
 .align-top {
-  vertical-align: top;
+  vertical-align: top !important;
 }
 
 .align-middle {
-  vertical-align: middle;
+  vertical-align: middle !important;
 }
 
 .align-bottom {
-  vertical-align: bottom;
+  vertical-align: bottom !important;
 }
 
 .align-text-bottom {
-  vertical-align: text-bottom;
+  vertical-align: text-bottom !important;
 }
 
 .align-text-top {
-  vertical-align: text-top;
+  vertical-align: text-top !important;
 }
 
 .float-clear {
@@ -136,85 +136,81 @@ input, button, select, optgroup, textarea {
 
 /* _flex.scss
  *
- * 파일 경로 : template/_flex.scss
+ * 파일 경로 : template/utilities/_flex.scss
  * @description flex display 관련 디자인
  * @author jy.lim
  * @version 1.0
  */
 .flex-row {
   display: flex;
-  flex-direction: row;
+  flex-direction: row !important;
 }
 
 .flex-column {
   display: flex;
-  flex-direction: column;
+  flex-direction: column !important;
 }
 
 .inline-flex {
-  display: inline-flex;
+  display: inline-flex !important;
 }
 
 .justify-content-start {
-  justify-content: flex-start;
+  justify-content: flex-start !important;
 }
 
 .justify-content-end {
-  justify-content: flex-end;
+  justify-content: flex-end !important;
 }
 
 .justify-content-center {
-  justify-content: center;
+  justify-content: center !important;
 }
 
 .justify-content-between {
-  justify-content: space-between;
-}
-
-.flex-wrap {
-  flex-wrap: wrap;
+  justify-content: space-between !important;
 }
 
 .align-items-start {
-  align-items: flex-start;
+  align-items: flex-start !important;
 }
 
 .align-items-end {
-  align-items: flex-end;
+  align-items: flex-end !important;
 }
 
 .align-items-center {
-  align-items: center;
+  align-items: center !important;
 }
 
 .align-items-baseline {
-  align-items: baseline;
+  align-items: baseline !important;
 }
 
 .align-self-start {
-  align-self: flex-start;
+  align-self: flex-start !important;
 }
 
 .align-self-end {
-  align-self: flex-end;
+  align-self: flex-end !important;
 }
 
 .align-self-center {
-  align-self: center;
+  align-self: center !important;
 }
 
 .align-self-baseline {
-  align-self: baseline;
+  align-self: baseline !important;
 }
 
 .flex-fill {
   flex: 1 1 auto;
 }
 
-/* _columns.scss 
+/* _columns.scss
  *
- * 파일 경로 : template/_columns.scss
- * @description HTML element 너비 관련 디자인
+ * 파일 경로 : template/utilities/_columns.scss
+ * @description HTML element column 너비 관련 디자인
  * @author jy.lim
  * @version 1.0
  */
@@ -314,6 +310,13 @@ input, button, select, optgroup, textarea {
   width: 100%;
 }
 
+/* _spacing.scss
+ *
+ * 파일 경로 : template/utilities/_spacing.scss
+ * @description HTML element padding, margin 여백 관련 디자인
+ * @author jy.lim
+ * @version 1.0
+ */
 .p-0 {
   padding: 0;
 }
@@ -414,9 +417,52 @@ input, button, select, optgroup, textarea {
   margin-top: auto;
 }
 
-/* _common.scss 
+/* _fonts.scss
  *
- * 파일 경로 : template/_common.scss
+ * 파일 경로 : template/utilities/_fonts.scss
+ * @description 글꼴 관련 설정
+ * @author jy.lim
+ * @version 1.0
+ */
+@font-face {
+  font-family: "Noto Sans KR";
+  src: local("Noto Sans KR"), url("../fonts/NotoSansKR-Thin.otf") format("opentype");
+  font-style: normal;
+  font-weight: 100;
+}
+@font-face {
+  font-family: "Noto Sans KR";
+  src: local("Noto Sans KR"), url("../fonts/NotoSansKR-Light.otf") format("opentype");
+  font-style: normal;
+  font-weight: 300;
+}
+@font-face {
+  font-family: "Noto Sans KR";
+  src: local("Noto Sans KR"), url("../fonts/NotoSansKR-Regular.otf") format("opentype");
+  font-style: normal;
+  font-weight: 400;
+}
+@font-face {
+  font-family: "Noto Sans KR";
+  src: local("Noto Sans KR"), url("../fonts/NotoSansKR-Medium.otf") format("opentype");
+  font-style: normal;
+  font-weight: 500;
+}
+@font-face {
+  font-family: "Noto Sans KR";
+  src: local("Noto Sans KR"), url("../fonts/NotoSansKR-Bold.otf") format("opentype");
+  font-style: normal;
+  font-weight: 700;
+}
+@font-face {
+  font-family: "Noto Sans KR";
+  src: local("Noto Sans KR"), url("../fonts/NotoSansKR-Black.otf") format("opentype");
+  font-style: normal;
+  font-weight: 900;
+}
+/* _common.scss
+ *
+ * 파일 경로 : template/utilities/_common.scss
  * @description 공통으로 사용되는 디자인
  * @author wdj
  * @version 1.0
@@ -484,49 +530,6 @@ input, button, select, optgroup, textarea {
   --data-row: 2;
 }
 
-/* _fonts.scss 
- *
- * 파일 경로 : template/_fonts.scss
- * @description 폰트 디자인
- * @author wdj
- * @version 1.0
- */
-@font-face {
-  font-family: "Noto Sans KR";
-  src: local("Noto Sans KR"), url("../fonts/NotoSansKR-Thin.otf") format("opentype");
-  font-style: normal;
-  font-weight: 100;
-}
-@font-face {
-  font-family: "Noto Sans KR";
-  src: local("Noto Sans KR"), url("../fonts/NotoSansKR-Light.otf") format("opentype");
-  font-style: normal;
-  font-weight: 300;
-}
-@font-face {
-  font-family: "Noto Sans KR";
-  src: local("Noto Sans KR"), url("../fonts/NotoSansKR-Regular.otf") format("opentype");
-  font-style: normal;
-  font-weight: 400;
-}
-@font-face {
-  font-family: "Noto Sans KR";
-  src: local("Noto Sans KR"), url("../fonts/NotoSansKR-Medium.otf") format("opentype");
-  font-style: normal;
-  font-weight: 500;
-}
-@font-face {
-  font-family: "Noto Sans KR";
-  src: local("Noto Sans KR"), url("../fonts/NotoSansKR-Bold.otf") format("opentype");
-  font-style: normal;
-  font-weight: 700;
-}
-@font-face {
-  font-family: "Noto Sans KR";
-  src: local("Noto Sans KR"), url("../fonts/NotoSansKR-Black.otf") format("opentype");
-  font-style: normal;
-  font-weight: 900;
-}
 /* _layout.scss
  *
  * 파일 경로 : template/_layout.scss
@@ -683,6 +686,9 @@ input, button, select, optgroup, textarea {
   transition: all 0.25s ease-out;
 }
 .component-accordion-box .component-accordion .accordion-content .component-icon-box {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   width: 100%;
   padding: 0;
   margin: 0;
@@ -978,7 +984,7 @@ input, button, select, optgroup, textarea {
   pointer-events: none;
 }
 
-/* _elements.scss 
+/* _elements.scss
  *
  * 파일 경로 : template/_elements.scss
  * @description HTML element 디자인
@@ -1532,7 +1538,7 @@ label {
   z-index: 25;
 }
 
-/* _buttons.scss 
+/* _buttons.scss
  *
  * 파일 경로 : template/_buttons.scss
  * @description 버튼 디자인
@@ -2356,7 +2362,7 @@ button.ghost-line:disabled .icon {
   border-bottom-right-radius: 0;
 }
 
-/* _alerts.scss 
+/* _alerts.scss
  *
  * 파일 경로 : template/_alerts.scss
  * @description 알림 모달
@@ -2497,7 +2503,7 @@ button.ghost-line:disabled .icon {
     margin: 0.5em;
   }
 }
-/* _scrollbars.scss 
+/* _scrollbars.scss
  *
  * 파일 경로 : template/_scrollbars.scss
  * @description 스크롤바 디자인
@@ -2768,7 +2774,7 @@ button.ghost-line:disabled .icon {
   background-color: #CCCED1;
 }
 
-/* _file-uploader.scss 
+/* _file-uploader.scss
  *
  * 파일 경로 : template/_file-uploader.scss
  * @description 파일 업로드 관련 디자인
@@ -3221,7 +3227,7 @@ button.ghost-line:disabled .icon {
   display: none;
 }
 
-/* _date-picker.scss 
+/* _date-picker.scss
  *
  * 파일 경로 : template/_date-picker.scss
  * @description Date/Time picker 관련 디자인
@@ -3462,7 +3468,7 @@ button.ghost-line:disabled .icon {
   margin: 1.25rem 1.25rem 1.25rem 0;
 }
 
-/* _text-editor.scss 
+/* _text-editor.scss
  *
  * 파일 경로 : template/_text-editor.scss
  * @description Customize Quill Editor v1.3.6 (https://quilljs.com/)
@@ -3697,7 +3703,7 @@ button.ghost-line:disabled .icon {
   border-color: transparent;
 }
 
-/* _color-picker.scss 
+/* _color-picker.scss
  *
  * 파일 경로 : template/_color-picker.scss
  * @description 컬러 피커 디자인
@@ -3816,7 +3822,7 @@ button.ghost-line:disabled .icon {
   vertical-align: middle;
 }
 
-/* _modal.scss 
+/* _modal.scss
  *
  * 파일 경로 : template/_modal.scss
  * @description 모달 디자인
@@ -3897,10 +3903,11 @@ body.modal-active {
   margin: 1rem 0 0.5rem 0;
 }
 .modal-dialog.save-as .modal-content .textarea-scroll-wrapper {
+  min-height: 7.5rem;
   resize: none;
 }
 
-/* _thumbnail.scss 
+/* _thumbnail.scss
  *
  * 파일 경로 : template/_thumbnail.scss
  * @description 썸네일 디자인
@@ -4036,7 +4043,7 @@ body.modal-active {
   height: calc(48.44rem - 3.375rem - 5rem);
 }
 
-/* _tooltip.scss 
+/* _tooltip.scss
  *
  * 파일 경로 : template/_tooltip.scss
  * @description 툴팁 디자인
