--- a/src/main/resources/public/src/scss/form/_components.scss
+++ b/src/main/resources/public/src/scss/form/_components.scss
@@ -22,7 +22,7 @@
   .move-handler {
     margin: 0 0.5rem 0 0; // 0 8.8px 0 0
     content: '';
-    @include maskImage('#{$icon-folder-path}form/icon_component_move.svg', 0.625rem, 0.75rem, no-repeat, center, null, map-get($gray, "pressed")); // 10px 12px
+    @include maskImage('#{$icon-folder-path}form/icon_component_move.svg', 0.625rem, 0.75rem, no-repeat, center, null, map-get($grays, "pressed")); // 10px 12px
     opacity: 0;
     cursor: move;
 
@@ -111,7 +111,7 @@
         padding: 1.875rem 0 0.625rem; // 30px 0 10px 0
         .icon-no-img {
             display: inline-block;
-            @include maskImage('#{$icon-folder-path}icon_image.svg', 100%, 2.813rem, no-repeat, center, 2.813rem, map-get($gray, "pressed")); // 45px
+            @include maskImage('#{$icon-folder-path}icon_image.svg', 100%, 2.813rem, no-repeat, center, 2.813rem, map-get($grays, "pressed")); // 45px
         }
         p {
           margin-top: 1.25rem; // 20px
@@ -189,7 +189,7 @@
         }
 
         .no-data-found-list {
-          background-color: map-get($gray, "light");
+          background-color: map-get($grays, "light");
           pointer-events: none;
           color: $gray;
         }
@@ -197,7 +197,7 @@
       // 아코디언 컴포넌트
       &.accordion {
         height: 2.5rem; // 40px
-        background-color: map-get($gray, "light");
+        background-color: map-get($grays, "light");
         position: relative;
         padding: 0.625rem 0 0.625rem 1.125rem; // 10px 0 10px 18px
         cursor: pointer;
@@ -273,7 +273,7 @@
       padding: 0;
       .btn-dr-table-row-add-text {
         margin-left: 0.625rem;
-        color: map-get($black, "light");
+        color: map-get($blacks, "light");
       }
     }
     // Dynamic Row Table 컴포넌트 - Row 삭제 버튼
