--- a/src/main/resources/public/src/scss/form/_variables.scss
+++ b/src/main/resources/public/src/scss/form/_variables.scss
@@ -7,12 +7,12 @@ $layout-header-font-weight:                  $font-weight-medium;
 $layout-header-bg-color:                     $blue;
 
 // main
-$layout-main-bg-color:                       map-get($gray, "light");
+$layout-main-bg-color:                       map-get($grays, "light");
 
 // main > drawing-board
 $drawing-board-width:                        60rem; // 960px
 $drawing-board-bg-color:                     $white;
-$drawing-board-border:                       0.0625rem solid map-get($gray, "line"); // 1px
+$drawing-board-border:                       0.0625rem solid map-get($grays, "line"); // 1px
 $drawing-board-box-shadow:                   0 0 0.9375rem 0 rgba(204, 206, 209, 0.3); // 흐림 15px,  $pressed-gray, 불투명도 30%;
 $drawing-board-margin:                       7.5rem 0; // 120px 0
 $drawing-board-padding:                      6.25rem 4.688rem; // 100px 75px;
@@ -22,21 +22,21 @@ $layout-properties-header-height:            2.5rem; // 40px
 $layout-properties-header-font-size:         $font-size-base;
 $layout-properties-header-font-color:        $white;
 $layout-properties-header-font-weight:       $font-weight-medium;
-$layout-properties-header-bg-color:          map-get($blue, "hover");
+$layout-properties-header-bg-color:          map-get($blues, "hover");
 
 // properties
 $layout-properties-width:                     18.75rem; // 300px
 $layout-properties-bg-color:                  $white;
-$layout-properties-border:                    0.0625rem solid map-get($gray, "line"); // 1px
+$layout-properties-border:                    0.0625rem solid map-get($grays, "line"); // 1px
 $layout-properties-box-shadow:                -0.0625rem 0.9375rem 0.4375rem 0 rgba(204, 206, 209, 0.15);// -1px 15px 7px 0px $pressed-gray, 불투명도 15%;
-$layout-properties-icon-color:                map-get($black, "light");
+$layout-properties-icon-color:                map-get($blacks, "light");
 
 //////////////////////////// form ////////////////////////////
 $column-row:                                  12;  // 폼을 나누는 갯수
 
 ////////////////////////// elements /////////////////////////
 // table
-$table-border-color:                          map-get($gray, "line");
+$table-border-color:                          map-get($grays, "line");
 
 ////////////////////////// components /////////////////////////
 $component-bg-color:                          $white;
@@ -46,15 +46,15 @@ $component-border:                            $component-border-width solid $com
 
 // 컴포넌트 선택시
 $component-pressed-bg-color:                  rgba(135, 206, 255, 0.1);
-$component-pressed-border-color:              map-get($blue, "light");
+$component-pressed-border-color:              map-get($blues, "light");
 $move-handler-focus-color:                    $blue;
 
 // 컴포넌트 readonly
 $component-disabled-font-color:               $gray;
-$component-disabled-bg-color:                 map-get($gray, "light");
+$component-disabled-bg-color:                 map-get($grays, "light");
 
 // 컴포넌트 툴팁
-$component-tooltip-menu-icon-color:           map-get($blue, "light");
+$component-tooltip-menu-icon-color:           map-get($blues, "light");
 $component-tooltip-menu-focus-font-color:     $blue;
 
 // 컴포넌트 drag
@@ -66,17 +66,17 @@ $component-drag-border:                       $component-drag-border-width dashe
 $editbox-font-size:                           $font-size-base;
 $editbox-font-weight:                         $font-weight-regular;
 $editbox-font-color:                          $gray;
-$editbox-pressed-font-color:                  map-get($blue, "light");
+$editbox-pressed-font-color:                  map-get($blues, "light");
 
 // image 컴포넌트
 $img-font-size:                               $font-size-base;
 $img-font-weight:                             $font-weight-regular;
 $img-font-color:                              $gray;
-$img-bg-color:                                map-get($gray, "light");
-$img-border:                                  0.0625rem solid map-get($gray, "line");
+$img-bg-color:                                map-get($grays, "light");
+$img-border:                                  0.0625rem solid map-get($grays, "line");
 
 // 커스텀 코드 컴포넌트
-$custom-code-btn-font-color:                  map-get($gray, "dark");
+$custom-code-btn-font-color:                  map-get($grays, "dark");
 
 // Dynamic Row Table 컴포넌트
 $dr-table-bg-color:                           $white;
@@ -89,10 +89,10 @@ $context-menu-width:                          11.25rem; // 180px
 $context-menu-height:                         14.06rem; // 225px
 $context-menu-bg-color:                       $white;
 $context-menu-font-size:                      $font-size-base;
-$context-menu-font-color:                     map-get($gray, "dark");
+$context-menu-font-color:                     map-get($grays, "dark");
 $context-menu-font-weight:                    $font-weight-regular;
-$context-menu-border:                         0.0625rem solid map-get($gray, "line"); // 1px
-$context-menu-box-shadow:                     0 0 0.3125rem 0 map-get($gray, "line"); // 흐림 5px, map-get($gray, "line")
+$context-menu-border:                         0.0625rem solid map-get($grays, "line"); // 1px
+$context-menu-box-shadow:                     0 0 0.3125rem 0 map-get($grays, "line"); // 흐림 5px, map-get($grays, "line")
 $context-menu-focus-bg-color:                 rgba(135, 206, 255, 0.1);
 $context-menu-focus-font-color:               $blue;
 
