--- a/src/main/resources/public/src/scss/formRefactoring/_layout.scss
+++ b/src/main/resources/public/src/scss/formRefactoring/_layout.scss
@@ -99,7 +99,7 @@
       font-weight: $accordion-font-weight;
       cursor:pointer;
       .arrow-left {
-        @include maskImage($icon-arrow-left, 0.75rem, 1.25rem, no-repeat, center, null, map-get($gray, "blue")); // 12px 20px
+        @include maskImage($icon-arrow-left, 0.75rem, 1.25rem, no-repeat, center, null, map-get($grays, "blue")); // 12px 20px
       }
     }
     .accordion-content {
@@ -110,6 +110,9 @@
       transition: all 0.25s ease-out;
 
       .component-icon-box {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
         width:100%;
         padding: 0;
         margin: 0;
@@ -162,7 +165,7 @@
           // drag & drop
           &.drag-on {
             .icon { background: $blue; }
-            .component-name { color: map-get($gray, "dark"); }
+            .component-name { color: map-get($grays, "dark"); }
           }
         }
       }
@@ -190,7 +193,7 @@
   }
   .drag-in {
     background-color: rgba(135, 206, 255, 0.1);
-    border: 0.0625rem dashed map-get($blue, "light"); // 1px
+    border: 0.0625rem dashed map-get($blues, "light"); // 1px
   }
   // drag & drop
   .component-icon-drag-in {
@@ -198,7 +201,7 @@
     width: 100%;
     height: 7.875rem; // 126px
     background-color: rgba(135, 206, 255, 0.1);
-    border: 0.0625rem dashed map-get($blue, "light"); // 1px
+    border: 0.0625rem dashed map-get($blues, "light"); // 1px
     .icon { opacity: 0; }
     .component-name { opacity: 0; }
   }
