--- a/src/main/resources/public/src/scss/formRefactoring/_variables.scss
+++ b/src/main/resources/public/src/scss/formRefactoring/_variables.scss
@@ -13,7 +13,7 @@ $layout-header-bg-color:                           $blue;
 // component palette
 $layout-component-palette-width:                   15.63rem; // 250px
 $layout-component-palette-bg-color:                $white;
-$layout-component-palette-border:                  0.0625rem solid map-get($gray, "line"); // 1px
+$layout-component-palette-border:                  0.0625rem solid map-get($grays, "line"); // 1px
 $layout-component-palette-box-shadow:              0.0625rem 0 0.4375rem 0 rgba(204, 206, 209, 0.15); // 1px 0px 7px 0px $pressed-gray, 불투명도 15%;
 
 // properties header
@@ -21,24 +21,24 @@ $layout-properties-panel-header-height:            3.125rem; // 50px
 $layout-properties-panel-header-font-size:         $font-size-base;
 $layout-properties-panel-header-font-color:        $white;
 $layout-properties-panel-header-font-weight:       $font-weight-medium;
-$layout-properties-panel-header-bg-color:          map-get($blue, "hover");
+$layout-properties-panel-header-bg-color:          map-get($blues, "hover");
 
 // properties panel
 $layout-properties-panel-width:                    23.13rem; // 370px
 $layout-properties-panel-bg-color:                 $white;
-$layout-properties-panel-border:                   0.0625rem solid map-get($gray, "line"); // 1px
+$layout-properties-panel-border:                   0.0625rem solid map-get($grays, "line"); // 1px
 $layout-properties-panel-box-shadow:               -0.0625rem 0.9375rem 0.4375rem 0 rgba(204, 206, 209, 0.15);// -1px 15px 7px 0px $pressed-gray, 불투명도 15%;
 
 // main
-$layout-main-bg-color:                             map-get($gray, "light");
+$layout-main-bg-color:                             map-get($grays, "light");
 
 // accordion
 $accordion-height:                                 3.125rem; // 50px
 $accordion-border-width:                           0.0625rem; // 1px
-$accordion-border-color:                           map-get($gray, "line");
+$accordion-border-color:                           map-get($grays, "line");
 $accordion-border:                                 $accordion-border-width solid $accordion-border-color;
 $accordion-font-size:                              $font-size-base;
-$accordion-font-color:                             map-get($gray, "blue");
+$accordion-font-color:                             map-get($grays, "blue");
 $accordion-font-weight:                            $font-weight-medium;
 $component-icon-width:                             7.813rem; // 125.5px
 $component-icon-height:                            7.188rem; // 115px
@@ -47,7 +47,7 @@ $component-icon-hover-bg-color:                    rgba(235, 235, 235, 0.3);
 ////////////////////////////////////// icon//////////////////////////////////////////////
 $icon-arrow-left:                                  $icon-folder-path + "icon_arrow_left.svg";
 
-$icon-component-color:                             map-get($gray, "blue");
+$icon-component-color:                             map-get($grays, "blue");
 
 $icon-component-inputBox:                          $icon-folder-path + "form/context-menu/icon-inputbox.svg";
 $icon-component-textArea:                          $icon-folder-path + "form/context-menu/icon-textbox.svg";
@@ -74,22 +74,22 @@ $element-font-size:                                0.875rem; // 14px
 //////////////////////////// form ////////////////////////////
 $form-min-height:                                  56.25rem; // 900px
 $form-bg-color:                                    $white;
-$form-border:                                      0.0625rem solid map-get($gray, "line"); // 1px
+$form-border:                                      0.0625rem solid map-get($grays, "line"); // 1px
 $form-box-shadow:                                  0 0 0.9375rem 0 rgba(204, 206, 209, 0.3); // 흐림 15px,  $pressed-gray, 불투명도 30%;
 
 //////////////////////////// group ///////////////////////////
-$group-accordion-bg-color:                         map-get($gray, "light");
-$group-accordion-border-color:                     map-get($gray, "line");
+$group-accordion-bg-color:                         map-get($grays, "light");
+$group-accordion-border-color:                     map-get($grays, "line");
 $group-accordion-border:                           0.0625rem solid $group-accordion-border-color; // 1px
-$group-selected-border-color:                      map-get($blue, "light");
+$group-selected-border-color:                      map-get($blues, "light");
 $group-selected-bg-color:                          rgba(135, 206, 255, 0.1);
 
 //////////////////////////// row ///////////////////////////
-$row-selected-border-color:                        map-get($blue, "light");
+$row-selected-border-color:                        map-get($blues, "light");
 $row-selected-bg-color:                            rgba(135, 206, 255, 0.1);
 
 ////////////////////////// components /////////////////////////
-$component-selected-border-color:                  map-get($blue, "light");
+$component-selected-border-color:                  map-get($blues, "light");
 $component-selected-bg-color:                      rgba(135, 206, 255, 0.1);
 
 // color-picker palette
@@ -102,9 +102,9 @@ $color-picker-colorchip-border:                    0.125rem solid $white; // 2px
 
 ///////////////////////// tooltip-menu /////////////////////////
 $tooltip-menu-bg-color:                            $white;
-$tooltip-menu-border-color:                        map-get($blue, "light");
+$tooltip-menu-border-color:                        map-get($blues, "light");
 $tooltip-menu-focus-bg-color:                      $blue;
-$tooltip-menu-icon-color:                          map-get($blue, "light");
+$tooltip-menu-icon-color:                          map-get($blues, "light");
 //////////////////////////// thumbnail //////////////////////////
 // 썸네일 모달
 $thumbnail-modal-width:                            62.63rem; // 1002px
@@ -165,17 +165,17 @@ $property-label-font-size:                         0.875rem; // 14px
 /////////// switch button 디자인 요소
 $btn-switch-font-size:                            0.875rem; // 14px
 $btn-switch-font-weight:                          $font-weight-medium;
-$btn-switch-font-color:                           map-get($black, "light");
-$btn-switch-bg-color:                             map-get($gray, "light");
-$btn-switch-border-color:                         map-get($gray, "line");
+$btn-switch-font-color:                           map-get($blacks, "light");
+$btn-switch-bg-color:                             map-get($grays, "light");
+$btn-switch-border-color:                         map-get($grays, "line");
 $btn-switch-border-width:                         0.0625rem; // 1px
 $btn-switch-border:                               $btn-switch-border-width solid $btn-switch-border-color;
 $btn-switch-border-radius:                        0.1875rem; // 3px
 
 // hover 시 디자인 요소
-$btn-switch-hover-font-color:                     map-get($black, "light");
+$btn-switch-hover-font-color:                     map-get($blacks, "light");
 $btn-switch-hover-bg-color:                       rgba(230, 230, 230, 0.3);
-$btn-switch-hover-border-color:                   map-get($gray, "line");
+$btn-switch-hover-border-color:                   map-get($grays, "line");
 
 // pressed 시 디자인 요소
 $btn-switch-pressed-font-color:                   $blue;
@@ -183,24 +183,24 @@ $btn-switch-pressed-bg-color:                     $white;
 $btn-switch-pressed-border-color:                 $blue;
 
 // disabled 시 디자인 요소
-$btn-switch-disabled-font-color:                  map-get($black, "light");
+$btn-switch-disabled-font-color:                  map-get($blacks, "light");
 $btn-switch-disabled-bg-color:                    $white;
-$btn-switch-disabled-border-color:                map-get($gray, "line");
+$btn-switch-disabled-border-color:                map-get($grays, "line");
 
 /////////////// toggle button 디자인 요소
 $btn-toggle-font-size:                            0.875rem; // 14px
-$btn-toggle-font-color:                           map-get($black, "light");
+$btn-toggle-font-color:                           map-get($blacks, "light");
 $btn-toggle-font-weight:                          $font-weight-medium;
 $btn-toggle-bg-color:                             $white;
-$btn-toggle-border-color:                         map-get($gray, "line");
+$btn-toggle-border-color:                         map-get($grays, "line");
 $btn-toggle-border-width:                         0.0625rem; // 1px
 $btn-toggle-border:                               $btn-toggle-border-width solid $btn-toggle-border-color;
 $btn-toggle-border-radius:                        0.1875rem; // 3px
 
 // hover 시 디자인 요소
-$btn-toggle-hover-font-color:                     map-get($black, "light");
+$btn-toggle-hover-font-color:                     map-get($blacks, "light");
 $btn-toggle-hover-bg-color:                       rgba(230, 230, 230, 0.3);
-$btn-toggle-hover-border-color:                   map-get($gray, "line");
+$btn-toggle-hover-border-color:                   map-get($grays, "line");
 
 // pressed 시 디자인 요소
 $btn-toggle-pressed-font-color:                   $blue;
@@ -208,6 +208,6 @@ $btn-toggle-pressed-bg-color:                     $white;
 $btn-toggle-pressed-border-color:                 $blue;
 
 // disabled 시 디자인 요소
-$btn-toggle-disabled-font-color:                  map-get($black, "light");
+$btn-toggle-disabled-font-color:                  map-get($blacks, "light");
 $btn-toggle-disabled-bg-color:                    $white;
-$btn-toggle-disabled-border-color:                map-get($gray, "line");
+$btn-toggle-disabled-border-color:                map-get($grays, "line");
