--- a/src/main/resources/public/src/scss/portal/_buttons.scss
+++ b/src/main/resources/public/src/scss/portal/_buttons.scss
@@ -19,9 +19,9 @@
 // 구글 로그인
 .login-google {
   width: 100%;
-  color: map-get($black, "light");
+  color: map-get($blacks, "light");
   background-color: $white;
-  border-color: map-get($gray, "line");
+  border-color: map-get($grays, "line");
   
   &.icon-google {
     @include backgroundImage($icon-folder-path + 'login/icon_login_google.svg', 1.188rem, no-repeat, 0.625rem, center, null); // 19px 10px
@@ -50,7 +50,7 @@
 // 카카오 로그인
 .login-kakao {
   width: 100%;
-  color: map-get($black, "light");
+  color: map-get($blacks, "light");
   background-color: #FFDE00;
   border-color: #EBCC00;
 
