--- a/src/main/resources/public/src/scss/process/_color-picker.scss
+++ b/src/main/resources/public/src/scss/process/_color-picker.scss
@@ -7,7 +7,7 @@
   .color-palette {
     @include colorPalette();
     & div {
-      &:last-child { border: 0.0625rem solid map-get($gray, "line"); }
+      &:last-child { border: 0.0625rem solid map-get($grays, "line"); }
     }
   }
   .color-palette-opacity {
