--- a/src/main/resources/public/src/scss/template/_buttons.scss
+++ b/src/main/resources/public/src/scss/template/_buttons.scss
@@ -17,16 +17,16 @@
 $btn-font-colors: (
   "point-fill":                  $white,
   "point-line":                  $blue,
-  "default-fill":                map-get($black, "light"),
-  "default-line":                map-get($black, "light"),
-  "ghost-fill":                  map-get($black, "light"),
-  "ghost-line":                  map-get($gray, "pressed")
+  "default-fill":                map-get($blacks, "light"),
+  "default-line":                map-get($blacks, "light"),
+  "ghost-fill":                  map-get($blacks, "light"),
+  "ghost-line":                  map-get($grays, "pressed")
 );
 // background color
 $btn-bg-colors: (
     "point-fill":                $blue,
     "point-line":                $white,
-    "default-fill":              map-get($gray, "default"),
+    "default-fill":              map-get($grays, "default"),
     "default-line":              $white,
     "ghost-fill":                transparent,
     "ghost-line":                $white
@@ -36,25 +36,25 @@ $btn-border-colors: (
     "point-fill":                transparent,
     "point-line":                $blue,
     "default-fill":              transparent,
-    "default-line":              map-get($gray, "line"),
+    "default-line":              map-get($grays, "line"),
     "ghost-fill":                transparent,
-    "ghost-line":                map-get($gray, "line")
+    "ghost-line":                map-get($grays, "line")
 );
 // hover , focus 시 디자인 요소
 // hover font color
 $btn-hover-font-colors: (
   "point-fill":                  $white,
   "point-line":                  $blue,
-  "default-fill":                map-get($black, "light"),
-  "default-line":                map-get($black, "light"),
-  "ghost-fill":                  map-get($black, "light"),
-  "ghost-line":                  map-get($black, "light")
+  "default-fill":                map-get($blacks, "light"),
+  "default-line":                map-get($blacks, "light"),
+  "ghost-fill":                  map-get($blacks, "light"),
+  "ghost-line":                  map-get($blacks, "light")
 );
 // hover background color
 $btn-hover-bg-colors: (
-    "point-fill":                map-get($blue, "hover"),
+    "point-fill":                map-get($blues, "hover"),
     "point-line":                rgba(0, 152, 255, 0.1),
-    "default-fill":              map-get($gray, "line"),
+    "default-fill":              map-get($grays, "line"),
     "default-line":              rgba(230, 230, 230, 0.3),
     "ghost-fill":                rgba(230, 230, 230, 0.3),
     "ghost-line":                $white
@@ -64,27 +64,27 @@ $btn-hover-border-colors: (
     "point-fill":                transparent,
     "point-line":                $blue,
     "default-fill":              transparent,
-    "default-line":              map-get($gray, "line"),
+    "default-line":              map-get($grays, "line"),
     "ghost-fill":                transparent,
-    "ghost-line":                map-get($gray, "line")
+    "ghost-line":                map-get($grays, "line")
 );
 // pressed 시 디자인 요소
 // pressed font color
 $btn-pressed-font-colors: (
   "point-fill":                  $white,
   "point-line":                  $white,
-  "default-fill":                map-get($black, "light"),
-  "default-line":                map-get($black, "light"),
-  "ghost-fill":                  map-get($black, "light"),
+  "default-fill":                map-get($blacks, "light"),
+  "default-line":                map-get($blacks, "light"),
+  "ghost-fill":                  map-get($blacks, "light"),
   "ghost-line":                  $blue
 );
 // pressed background color
 $btn-pressed-bg-colors: (
-    "point-fill":                map-get($blue, "pressed"),
-    "point-line":                map-get($blue, "hover"),
-    "default-fill":              map-get($gray, "pressed"),
-    "default-line":              map-get($gray, "line"),
-    "ghost-fill":                map-get($gray, "line"),
+    "point-fill":                map-get($blues, "pressed"),
+    "point-line":                map-get($blues, "hover"),
+    "default-fill":              map-get($grays, "pressed"),
+    "default-line":              map-get($grays, "line"),
+    "ghost-fill":                map-get($grays, "line"),
     "ghost-line":                $white
 );
 // pressed border color
@@ -92,7 +92,7 @@ $btn-pressed-border-colors: (
     "point-fill":                transparent,
     "point-line":                $blue,
     "default-fill":              transparent,
-    "default-line":              map-get($gray, "pressed"),
+    "default-line":              map-get($grays, "pressed"),
     "ghost-fill":                transparent,
     "ghost-line":                $blue
 );
@@ -101,28 +101,28 @@ $btn-pressed-border-colors: (
 $btn-disabled-font-colors: (
   "point-fill":                  $white,
   "point-line":                  $blue,
-  "default-fill":                map-get($black, "light"),
-  "default-line":                map-get($black, "light"),
-  "ghost-fill":                  map-get($black, "light"),
-  "ghost-line":                  map-get($black, "light")
+  "default-fill":                map-get($blacks, "light"),
+  "default-line":                map-get($blacks, "light"),
+  "ghost-fill":                  map-get($blacks, "light"),
+  "ghost-line":                  map-get($blacks, "light")
 );
 // disabled background color
 $btn-disabled-bg-colors: (
     "point-fill":                $blue,
     "point-line":                $white,
-    "default-fill":              map-get($gray, "default"),
+    "default-fill":              map-get($grays, "default"),
     "default-line":              $white,
     "ghost-fill":                transparent,
-    "ghost-line":                map-get($gray, "pressed")
+    "ghost-line":                map-get($grays, "pressed")
 );
 // disabled border color
 $btn-disabled-border-colors: (
     "point-fill":                transparent,
     "point-line":                $blue,
     "default-fill":              transparent,
-    "default-line":              map-get($gray, "line"),
+    "default-line":              map-get($grays, "line"),
     "ghost-fill":                transparent,
-    "ghost-line":                map-get($gray, "line")
+    "ghost-line":                map-get($grays, "line")
 );
 // <a class="btn"></a>  or button
 .btn, 
