--- a/src/main/resources/public/src/scss/template/mixins/_layout.scss
+++ b/src/main/resources/public/src/scss/template/mixins/_layout.scss
@@ -7,7 +7,7 @@
   .header-search {
     padding: 0.3125rem 0px 1.875rem 0px; // 5px 0px 30px 0px
     // 건수
-    .txt-num { color: map-get($gray, "warm"); }
+    .txt-num { color: map-get($grays, "warm"); }
   }
 }
 
@@ -57,7 +57,7 @@
       color: $view-title-font-color;
       padding-bottom: 0.625rem; // 10px
       margin-bottom: 0.625rem; //10px
-      border-bottom: 0.125rem solid map-get($gray, "default"); // 2px
+      border-bottom: 0.125rem solid map-get($grays, "default"); // 2px
     }
     // 등록일, 등록자
     &-sub-title {
@@ -98,7 +98,7 @@
       font-weight: $view-title-font-weight;
       color: $view-title-font-color;
       padding-bottom: 0.625rem; // 10px
-      border-bottom: 0.125rem solid map-get($gray, "default"); // 2px
+      border-bottom: 0.125rem solid map-get($grays, "default"); // 2px
     }
     // 등록일, 등록자
     &-sub-title {
@@ -133,12 +133,12 @@
     &-head {
       tr {
         height: 2.125rem; // 34px
-        border-bottom: 0.125rem solid map-get($gray, "default"); // 2px
+        border-bottom: 0.125rem solid map-get($grays, "default"); // 2px
 
         th {
           font-size: 1.125rem; // 18px
           font-weight: $font-weight-medium;
-          color: map-get($black, "light");
+          color: map-get($blacks, "light");
           padding: 0 0.9375rem; // 0 15px
 
           &:first-child { padding-left: 1.25rem; } // 20px
@@ -164,13 +164,13 @@
         td {
           font-size: 1rem; // 16px
           font-weight: $font-weight-regular;
-          color: map-get($gray, "dark");
+          color: map-get($grays, "dark");
           padding: 0 0.9375rem; // 0 15px
           line-height: initial; // 소문자 글자 짤림현상 방지
 
           &:first-child { padding-left: 1.25rem; } // 20px
 
-          a { color: map-get($gray, "dark"); }
+          a { color: map-get($grays, "dark"); }
         }
       }
       // 데이터 없을때
@@ -220,7 +220,7 @@
       .no-data-text {
         font-size: 1.125rem;; // 18px
         font-weight: $font-weight-medium;
-        color: map-get($gray, "pressed");
+        color: map-get($grays, "pressed");
         margin-left: 2.5rem; // 40px
       }
     }
